examples/test/testpolicy14221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14221
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key11: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value12
      podSelector:
        matchLabels:
          key39: value7
          key17: value21
          key37: value6
